<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.my.gymcenter.user.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ranshaonidekaluli"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/UserManage"
            style="@style/ButtonWithMargin"
            android:text="@string/UserManage"/>

        <Button
            android:id="@+id/UserAdd"
            style="@style/ButtonWithMargin"
            android:text="@string/UserAdd"/>

        <Button
            android:id="@+id/LessonManage"
            style="@style/ButtonWithMargin"
            android:text="@string/LessonManage"/>

        <Button
            android:id="@+id/CoachManage"
            style="@style/ButtonWithMargin"
            android:text="@string/CoachManage"/>

        <Button
            android:id="@+id/releaseAnnouncement"
            style="@style/ButtonWithMargin"
            android:text="@string/Announcement"/>
    </LinearLayout>


</LinearLayout>